--- a/index.html
+++ b/index.html
@@ -20,15 +20,15 @@
     
     <div class="relative">
     <ul>
-        <li class="floatleft"><h3>period</h3></li>
-        <li class="floatleft"><h3>Diet</h3></li>
-        <li class="floatleft"><h3>Length</h3></li>
+        <li class="headers"><h3>PERIOD</h3></li>
+        <li class="headers"><h3>DIET</h3></li>
+        <li class="headers"><h3>LENGTH</h3></li>
     </ul>
     
     <ul>
-        <li class="floatleft"><h4>Late Jurassic</h4></li>
-        <li class="floatleft"><h4>Herbivore</h4></li>
-        <li class="floatleft"><h4>9m</h4></li>
+        <li class="units"><h4>Late Jurassic</h4></li>
+        <li class="units"><h4>Herbivore</h4></li>
+        <li class="units"><h4>9m</h4></li>
     </ul>
     </div>
 </div>
