--- a/index.html
+++ b/index.html
@@ -21,18 +21,21 @@
     <div class="relative">
     <ul>
         <li class="headers"><h3>PERIOD</h3></li>
-        <li class="headers"><h3>DIET</h3></li>
-        <li class="headers"><h3>LENGTH</h3></li>
+        <li class="headers seperator"><h3>DIET</h3></li>
+        <li class="headers seperator"><h3>LENGTH</h3></li>
     </ul>
     
     <ul>
         <li class="units"><h4>Late Jurassic</h4></li>
-        <li class="units"><h4>Herbivore</h4></li>
-        <li class="units"><h4>9m</h4></li>
+        <li class="units seperator"><h4>Herbivore</h4></li>
+        <li class="units seperator"><h4>9m</h4></li>
     </ul>
     </div>
 </div>
     
+<br>
+<br>
+<br>
 <br>
 <br>
 <br>
